<resources>
    <string name="app_name">RocketChat</string>
    <string name="login_title">Sign In</string>
    <string name="registration_title">Sign Up</string>
    <string name="e_mail_title">E-MAIL</string>
    <string name="nickname_title">nickname</string>
    <string name="email_hint">email@email.com</string>
    <string name="password_title">password</string>
    <string name="password_hint">********</string>
    <string name="login_button_text">Login</string>
    <string name="registration_button_text">Registration</string>
    <string name="sign_up_text">Don\'t have an account yet?</string>
    <string name="sign_in_text">Do you already have an account?</string>
    <string name="sign_up_link">Sign Up</string>
    <string name="sign_in_link">Sign In</string>
    <string name="search">Search…</string>

    //Common
    <string name="any_screen_access_denied">Access denied</string>
    <string name="any_screen_show_images_weight_limit">Size must be less than 5 mb</string>
    <string name="any_screen_accept">Accept</string>
    <string name="global_error_title">ERROR</string>
    <string name="global_error_button_close">Close</string>

    //Home
    <string name="home_header">Hi, %1$s!</string>
    <string name="home_tab_chat_rooms">Chatrooms</string>
    <string name="home_tab_chat_favourites">Favourites</string>
    <string name="home_tab_chat_users">Users</string>

    //Chatroom
    <string name="create_chatroom_empty_name_error">You have to come up with a name for your chatroom</string>
    <string name="create_chatroom">Create Chatroom</string>
    <string name="create_chatroom_name_hint">Chatroom name</string>
    <string name="create_chatroom_description_hint">Description</string>
    <string name="create_chatroom_description_sub">You can provide an optional description for your chatroom.</string>
    <string name="option_edit">Edite</string>
    <string name="option_delete">Delete</string>

    //Chat
    <string name="chat_send_hint">Message…</string>
    <string name="profile_title">Profile</string>
</resources>