<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/create_chat_room_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/create_chatroom_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:orientation="horizontal"
        android:padding="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/create_chatroom_arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="@dimen/margin_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_weight="@integer/int_1"
            android:text="@string/create_chatroom"
            android:textAppearance="@style/RocketChat.H2" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/create_chatroom_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_check" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/add_chatroom_image"
        android:layout_width="@dimen/margin_60"
        android:layout_height="@dimen/margin_60"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_24"
        android:src="@drawable/ic_add_a_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_chatroom_header" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/create_chatroom_name"
        android:layout_width="@dimen/margin_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_24"
        android:hint="@string/create_chatroom_name_hint"
        android:imeOptions="actionNext"
        android:padding="@dimen/margin_8"
        android:textAppearance="@style/RocketChat.SubTitle"
        android:textColorHint="@color/light_gray_alpha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_chatroom_image"
        app:layout_constraintTop_toBottomOf="@+id/create_chatroom_header" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/create_chatroom_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_24"
        android:hint="@string/create_chatroom_description_hint"
        android:imeOptions="actionDone"
        android:padding="@dimen/margin_8"
        android:textAppearance="@style/RocketChat.SubTitle"
        android:textColorHint="@color/light_gray_alpha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_chatroom_image" />

    <TextView
        android:id="@+id/create_chatroom_description_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        android:maxLines="2"
        android:text="@string/create_chatroom_description_sub"
        android:textAppearance="@style/RocketChat.Body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_chatroom_description" />

</androidx.constraintlayout.widget.ConstraintLayout>